# lhwmonitor

./: .gitignore  INFO.md  MONITOR.md  PROJECT_HISTORY.md  README.md  pyproject.toml
scripts/: capture_screenshots.py
src/lhwmonitor/: __init__.py  __main__.py  export_log.py  info_flatten.py  main.py  monitor_rows.py
src/lhwmonitor/data/: __init__.py  cpu.py  cpufreq.py  disk_smart.py  dmi.py  gpu_mem.py  info_bundle.py  memory.py  monitor_snapshot.py  net_dev.py  pci.py  power_supply.py  proc_stat.py  sensors_live.py  thermal.py
src/lhwmonitor/ui/: __init__.py  main_window.py  monitor_trend_chart.py
tests/: test_proc_stat.py  test_sensors_flatten.py
